# NetworkSender

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  test.txt
Common/: CommonData.h  Socket.cpp  Socket.h  SocketException.h
Common/Mocks/: SocketMock.h
Receiver/: Receiver.cpp  Receiver.h  main.cpp
Receiver/Mocks/: ReceiverMock.h
Sender/: Sender.cpp  Sender.h  main.cpp
test/Fakes/: socketFake.h
test/UnitTests/Common/: SocketTests.cpp
test/UnitTests/Receiver/: ReceiverTests.cpp
test/UnitTests/Sender/: SenderTests.cpp
